--- a/manual/emacspeak_002dkeymap.html
+++ b/manual/emacspeak_002dkeymap.html
@@ -79,19 +79,25 @@ Note that the &lt;fn&gt; key found on laptops is denoted &lt;fn&gt;
 </dd></dl>
 
 <dl class="def">
-<dt id="index-User-Option-49"><span class="category">Variable: </span><span><strong>User Option</strong> <em>emacspeak-personal-ctlx-keys</em><a href='#index-User-Option-49' class='copiable-anchor'> &para;</a></span></dt>
+<dt id="index-User-Option-49"><span class="category">Variable: </span><span><strong>User Option</strong> <em>emacspeak-multi-keys</em><a href='#index-User-Option-49' class='copiable-anchor'> &para;</a></span></dt>
+<dd><p>Multi key bindings. 
+</p>
+</dd></dl>
+
+<dl class="def">
+<dt id="index-User-Option-50"><span class="category">Variable: </span><span><strong>User Option</strong> <em>emacspeak-personal-ctlx-keys</em><a href='#index-User-Option-50' class='copiable-anchor'> &para;</a></span></dt>
 <dd><p>Key bindings for use with C-e C-x. 
 </p>
 </dd></dl>
 
 <dl class="def">
-<dt id="index-User-Option-50"><span class="category">Variable: </span><span><strong>User Option</strong> <em>emacspeak-personal-keys</em><a href='#index-User-Option-50' class='copiable-anchor'> &para;</a></span></dt>
+<dt id="index-User-Option-51"><span class="category">Variable: </span><span><strong>User Option</strong> <em>emacspeak-personal-keys</em><a href='#index-User-Option-51' class='copiable-anchor'> &para;</a></span></dt>
 <dd><p>Key bindings for  C-e x. 
 </p>
 </dd></dl>
 
 <dl class="def">
-<dt id="index-User-Option-51"><span class="category">Variable: </span><span><strong>User Option</strong> <em>emacspeak-super-keys</em><a href='#index-User-Option-51' class='copiable-anchor'> &para;</a></span></dt>
+<dt id="index-User-Option-52"><span class="category">Variable: </span><span><strong>User Option</strong> <em>emacspeak-super-keys</em><a href='#index-User-Option-52' class='copiable-anchor'> &para;</a></span></dt>
 <dd><p>Super key bindings. 
 </p>
 </dd></dl>
