--- a/manual/emacspeak_002dwizards.html
+++ b/manual/emacspeak_002dwizards.html
@@ -850,9 +850,7 @@ updating custom settings for a specific package or group of packages.
 <dd><dl compact="compact">
 <dt id='index-C_002dz-n'><span><kbd>C-z n</kbd><a href='#index-C_002dz-n' class='copiable-anchor'> &para;</a></span></dt>
 <dt id='index-C_002d_003b-n'><span><kbd>C-; n</kbd><a href='#index-C_002d_003b-n' class='copiable-anchor'> &para;</a></span></dt>
-<dt id='index-C_002d_003b-C_002d_002e'><span><kbd>C-; C-.</kbd><a href='#index-C_002d_003b-C_002d_002e' class='copiable-anchor'> &para;</a></span></dt>
 <dt id='index-C_002dx-_0040-h-n'><span><kbd>C-x @ h n</kbd><a href='#index-C_002dx-_0040-h-n' class='copiable-anchor'> &para;</a></span></dt>
-<dt id='index-C_002dx-_0040-h-C_002d_002e'><span><kbd>C-x @ h C-.</kbd><a href='#index-C_002dx-_0040-h-C_002d_002e' class='copiable-anchor'> &para;</a></span></dt>
 </dl>
 
 <span id="index-emacspeak_002dwizards_002dcycle_002dto_002dnext_002dbuffer-1"></span>
@@ -870,9 +868,7 @@ updating custom settings for a specific package or group of packages.
 <dd><dl compact="compact">
 <dt id='index-C_002dz-p'><span><kbd>C-z p</kbd><a href='#index-C_002dz-p' class='copiable-anchor'> &para;</a></span></dt>
 <dt id='index-C_002d_003b-p'><span><kbd>C-; p</kbd><a href='#index-C_002d_003b-p' class='copiable-anchor'> &para;</a></span></dt>
-<dt id='index-C_002d_003b-C_002d_002c'><span><kbd>C-; C-,</kbd><a href='#index-C_002d_003b-C_002d_002c' class='copiable-anchor'> &para;</a></span></dt>
 <dt id='index-C_002dx-_0040-h-p'><span><kbd>C-x @ h p</kbd><a href='#index-C_002dx-_0040-h-p' class='copiable-anchor'> &para;</a></span></dt>
-<dt id='index-C_002dx-_0040-h-C_002d_002c'><span><kbd>C-x @ h C-,</kbd><a href='#index-C_002dx-_0040-h-C_002d_002c' class='copiable-anchor'> &para;</a></span></dt>
 </dl>
 
 <span id="index-emacspeak_002dwizards_002dcycle_002dto_002dprevious_002dbuffer-1"></span>
@@ -1358,12 +1354,7 @@ Optional interactive prefix arg refreshes cache.
 <h4 class="subsubsection">12.212.1.69 emacspeak-wizards-iex-show-quote</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dwizards_002diex_002dshow_002dquote"><span class="category">Command: </span><span><strong>emacspeak-wizards-iex-show-quote</strong> <em>(&amp;optional refresh)</em><a href='#index-emacspeak_002dwizards_002diex_002dshow_002dquote' class='copiable-anchor'> &para;</a></span></dt>
-<dd><dl compact="compact">
-<dt id='index-C_002d_002e-q'><span><kbd>C-. q</kbd><a href='#index-C_002d_002e-q' class='copiable-anchor'> &para;</a></span></dt>
-<dt id='index-C_002dx-_0040-s-q'><span><kbd>C-x @ s q</kbd><a href='#index-C_002dx-_0040-s-q' class='copiable-anchor'> &para;</a></span></dt>
-</dl>
-
-<span id="index-emacspeak_002dwizards_002diex_002dshow_002dquote-1"></span>
+<dd><span id="index-emacspeak_002dwizards_002diex_002dshow_002dquote-1"></span>
 
 <div class="format">
 <pre class="format">Show portfolio  data from cache.
@@ -2125,8 +2116,6 @@ the final or penultimate step during initialization.
 <dd><dl compact="compact">
 <dt id='index-C_002dz-b'><span><kbd>C-z b</kbd><a href='#index-C_002dz-b' class='copiable-anchor'> &para;</a></span></dt>
 <dt id='index-C_002d_002e-m'><span><kbd>C-. m</kbd><a href='#index-C_002d_002e-m' class='copiable-anchor'> &para;</a></span></dt>
-<dt id='index-C_002d_002c-c'><span><kbd>C-, c</kbd><a href='#index-C_002d_002c-c' class='copiable-anchor'> &para;</a></span></dt>
-<dt id='index-C_002dx-_0040-a-c'><span><kbd>C-x @ a c</kbd><a href='#index-C_002dx-_0040-a-c' class='copiable-anchor'> &para;</a></span></dt>
 <dt id='index-C_002dx-_0040-s-m'><span><kbd>C-x @ s m</kbd><a href='#index-C_002dx-_0040-s-m' class='copiable-anchor'> &para;</a></span></dt>
 </dl>
 
