--- a/manual/emacspeak_002dwizards.html
+++ b/manual/emacspeak_002dwizards.html
@@ -1768,7 +1768,12 @@ of the source buffer.
 <h4 class="subsubsection">12.212.1.92 emacspeak-wizards-shell-directory-set</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dwizards_002dshell_002ddirectory_002dset"><span class="category">Command: </span><span><strong>emacspeak-wizards-shell-directory-set</strong><a href='#index-emacspeak_002dwizards_002dshell_002ddirectory_002dset' class='copiable-anchor'> &para;</a></span></dt>
-<dd><span id="index-emacspeak_002dwizards_002dshell_002ddirectory_002dset-1"></span>
+<dd><dl compact="compact">
+<dt id='index-C_002de-x-_002c'><span><kbd>C-e x ,</kbd><a href='#index-C_002de-x-_002c' class='copiable-anchor'> &para;</a></span></dt>
+<dt id='index-_003cfn_003e-x-_002c'><span><kbd>&lt;fn&gt; x ,</kbd><a href='#index-_003cfn_003e-x-_002c' class='copiable-anchor'> &para;</a></span></dt>
+</dl>
+
+<span id="index-emacspeak_002dwizards_002dshell_002ddirectory_002dset-1"></span>
 
 <div class="format">
 <pre class="format">Define current directory as this shell’s project directory.
@@ -1783,11 +1788,7 @@ of the source buffer.
 <dd><dl compact="compact">
 <dt id='index-C_002de-_003cf11_003e'><span><kbd>C-e &lt;f11&gt;</kbd><a href='#index-C_002de-_003cf11_003e' class='copiable-anchor'> &para;</a></span></dt>
 <dt id='index-C_002d_003b-C_002dj'><span><kbd>C-; C-j</kbd><a href='#index-C_002d_003b-C_002dj' class='copiable-anchor'> &para;</a></span></dt>
-<dt id='index-C_002d_002e-_002c'><span><kbd>C-. ,</kbd><a href='#index-C_002d_002e-_002c' class='copiable-anchor'> &para;</a></span></dt>
 <dt id='index-_003cfn_003e-_003cf11_003e'><span><kbd>&lt;fn&gt; &lt;f11&gt;</kbd><a href='#index-_003cfn_003e-_003cf11_003e' class='copiable-anchor'> &para;</a></span></dt>
-<dt id='index-C_002de-x-_002c'><span><kbd>C-e x ,</kbd><a href='#index-C_002de-x-_002c' class='copiable-anchor'> &para;</a></span></dt>
-<dt id='index-_003cfn_003e-x-_002c'><span><kbd>&lt;fn&gt; x ,</kbd><a href='#index-_003cfn_003e-x-_002c' class='copiable-anchor'> &para;</a></span></dt>
-<dt id='index-C_002dx-_0040-s-_002c'><span><kbd>C-x @ s ,</kbd><a href='#index-C_002dx-_0040-s-_002c' class='copiable-anchor'> &para;</a></span></dt>
 <dt id='index-C_002dx-_0040-h-C_002dj'><span><kbd>C-x @ h C-j</kbd><a href='#index-C_002dx-_0040-h-C_002dj' class='copiable-anchor'> &para;</a></span></dt>
 </dl>
 
