--- a/manual/Emacspeak-Keybindings-On-emacspeak_002dmulti_002dkeymap.html
+++ b/manual/Emacspeak-Keybindings-On-emacspeak_002dmulti_002dkeymap.html
@@ -50,6 +50,16 @@ Previous: <a href="Emacspeak-Keybindings-On-emacspeak_002dpersonal_002dctlx_002d
 <hr>
 <span id="Emacspeak-Keybindings-On-emacspeak_002dmulti_002dkeymap-1"></span><h3 class="section">11.8 Emacspeak Keybindings On emacspeak-multi-keymap</h3>
 
+<dl compact="compact">
+<dt><span><kbd>h</kbd></span></dt>
+<dd><p>emacspeak-m-player-browse-history
+</p>
+</dd>
+<dt><span><kbd>l</kbd></span></dt>
+<dd><p>emacspeak-wizards-locate-content
+</p>
+</dd>
+</dl>
 </div>
 
 
