--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -348,6 +348,8 @@ Previous: <a href="Concept-Index.html" accesskey="p" rel="prev">Concept Index</a
 <tr><td></td><td valign="top"><a href="amixer.html#index-_003cXF86AudioRaiseVolume_003e"><code>&lt;XF86AudioRaiseVolume&gt;</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="amixer.html">amixer</a></td></tr>
 <tr><td colspan="4"> <hr></td></tr>
 <tr><th id="Key-Index_ky_letter-C">C</th><td></td><td></td></tr>
+<tr><td></td><td valign="top"><a href="emacspeak_002dm_002dplayer.html#index-C_002d_0027-h"><code>C-' h</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dm_002dplayer.html">emacspeak-m-player</a></td></tr>
+<tr><td></td><td valign="top"><a href="emacspeak_002dwizards.html#index-C_002d_0027-l"><code>C-' l</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dwizards.html">emacspeak-wizards</a></td></tr>
 <tr><td></td><td valign="top"><a href="extra_002dmuggles.html#index-C_002d_002c-_002f"><code>C-, /</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="extra_002dmuggles.html">extra-muggles</a></td></tr>
 <tr><td></td><td valign="top"><a href="emacspeak_002dfeeds.html#index-C_002d_002c-a"><code>C-, a</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dfeeds.html">emacspeak-feeds</a></td></tr>
 <tr><td></td><td valign="top"><a href="sox_002dgen.html#index-C_002d_002c-b"><code>C-, b</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="sox_002dgen.html">sox-gen</a></td></tr>
