--- a/manual/Emacspeak-Keybindings-On-emacspeak_002dmulti_002dkeymap.html
+++ b/manual/Emacspeak-Keybindings-On-emacspeak_002dmulti_002dkeymap.html
@@ -59,6 +59,10 @@ Previous: <a href="Emacspeak-Keybindings-On-emacspeak_002dpersonal_002dctlx_002d
 <dd><p>emacspeak-m-player-locate-media
 </p>
 </dd>
+<dt><span><kbd>y</kbd></span></dt>
+<dd><p>emacspeak-google-yt-feed
+</p>
+</dd>
 </dl>
 </div>
 
