--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -350,6 +350,7 @@ Previous: <a href="Concept-Index.html" accesskey="p" rel="prev">Concept Index</a
 <tr><th id="Key-Index_ky_letter-C">C</th><td></td><td></td></tr>
 <tr><td></td><td valign="top"><a href="emacspeak_002dm_002dplayer.html#index-C_002d_0027-h"><code>C-' h</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dm_002dplayer.html">emacspeak-m-player</a></td></tr>
 <tr><td></td><td valign="top"><a href="emacspeak_002dm_002dplayer.html#index-C_002d_0027-l"><code>C-' l</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dm_002dplayer.html">emacspeak-m-player</a></td></tr>
+<tr><td></td><td valign="top"><a href="emacspeak_002dgoogle.html#index-C_002d_0027-y"><code>C-' y</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dgoogle.html">emacspeak-google</a></td></tr>
 <tr><td></td><td valign="top"><a href="extra_002dmuggles.html#index-C_002d_002c-_002f"><code>C-, /</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="extra_002dmuggles.html">extra-muggles</a></td></tr>
 <tr><td></td><td valign="top"><a href="emacspeak_002dfeeds.html#index-C_002d_002c-a"><code>C-, a</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dfeeds.html">emacspeak-feeds</a></td></tr>
 <tr><td></td><td valign="top"><a href="sox_002dgen.html#index-C_002d_002c-b"><code>C-, b</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="sox_002dgen.html">sox-gen</a></td></tr>
@@ -788,6 +789,7 @@ Previous: <a href="Concept-Index.html" accesskey="p" rel="prev">Concept Index</a
 <tr><td></td><td valign="top"><a href="soundscape.html#index-C_002dx-_0040-s-t"><code>C-x @ s t</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="soundscape.html">soundscape</a></td></tr>
 <tr><td></td><td valign="top"><a href="soundscape.html#index-C_002dx-_0040-s-u"><code>C-x @ s u</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="soundscape.html">soundscape</a></td></tr>
 <tr><td></td><td valign="top"><a href="extra_002dmuggles.html#index-C_002dx-_0040-s-v"><code>C-x @ s v</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="extra_002dmuggles.html">extra-muggles</a></td></tr>
+<tr><td></td><td valign="top"><a href="emacspeak_002deww.html#index-C_002dx-r-C_002de"><code>C-x r C-e</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002deww.html">emacspeak-eww</a></td></tr>
 <tr><td></td><td valign="top"><a href="emacspeak_002deww.html#index-C_002dx-r-e"><code>C-x r e</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002deww.html">emacspeak-eww</a></td></tr>
 <tr><td></td><td valign="top"><a href="emacspeak_002dwizards.html#index-C_002dz-b"><code>C-z b</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dwizards.html">emacspeak-wizards</a></td></tr>
 <tr><td></td><td valign="top"><a href="emacspeak_002dwizards.html#index-C_002dz-e"><code>C-z e</code></a>:</td><td>&nbsp;</td><td valign="top"><a href="emacspeak_002dwizards.html">emacspeak-wizards</a></td></tr>
