--- a/manual/emacspeak_002dgoogle.html
+++ b/manual/emacspeak_002dgoogle.html
@@ -111,6 +111,7 @@ Now, some specialized searches, e.g. blog search are tbm=
 <li><a href="#emacspeak_002dgoogle_002dtts_002dregion">emacspeak-google-tts-region</a></li>
 <li><a href="#emacspeak_002dgoogle_002dwhat_002dis_002dmy_002dip">emacspeak-google-what-is-my-ip</a></li>
 <li><a href="#emacspeak_002dgoogle_002dwho_002dlinks_002dto_002dthis_002dpage">emacspeak-google-who-links-to-this-page</a></li>
+<li><a href="#emacspeak_002dgoogle_002dyt_002dfeed">emacspeak-google-yt-feed</a></li>
 </ul>
 <div class="subsubsection" id="emacspeak_002dgoogle_002dextract_002dfrom_002dcache">
 <h4 class="subsubsection">12.92.1.1 emacspeak-google-extract-from-cache</h4>
@@ -653,6 +654,24 @@ Optional interactive prefix arg ‘lang’ specifies  language identifier.
 <div class="format">
 <pre class="format">Perform a google search to locate documents that link to the
 current page.
+</pre></div>
+</dd></dl>
+
+</div>
+<div class="subsubsection" id="emacspeak_002dgoogle_002dyt_002dfeed">
+<h4 class="subsubsection">12.92.1.45 emacspeak-google-yt-feed</h4>
+<dl class="def">
+<dt id="index-emacspeak_002dgoogle_002dyt_002dfeed"><span class="category">Command: </span><span><strong>emacspeak-google-yt-feed</strong> <em>(url)</em><a href='#index-emacspeak_002dgoogle_002dyt_002dfeed' class='copiable-anchor'> &para;</a></span></dt>
+<dd><dl compact="compact">
+<dt id='index-C_002d_0027-y'><span><kbd>C-' y</kbd><a href='#index-C_002d_0027-y' class='copiable-anchor'> &para;</a></span></dt>
+</dl>
+
+<span id="index-emacspeak_002dgoogle_002dyt_002dfeed-1"></span>
+
+<div class="format">
+<pre class="format">Turn YT Channel or Playlist url into an RSS feed and open it.
+
+(fn URL)
 </pre></div>
 </dd></dl>
 
