--- a/manual/emacspeak_002dkeymap.html
+++ b/manual/emacspeak_002dkeymap.html
@@ -88,7 +88,7 @@ Note that the &lt;fn&gt; key found on laptops is denoted &lt;fn&gt;
 <dt id="index-User-Option-50"><span class="category">Variable: </span><span><strong>User Option</strong> <em>emacspeak-multi-keys</em><a href='#index-User-Option-50' class='copiable-anchor'> &para;</a></span></dt>
 <dd><p>Multi key bindings. 
 </p>
-<p>Default Value: <code><tt>((h emacspeak-m-player-browse-history) (l emacspeak-m-player-locate-media))</tt></code>
+<p>Default Value: <code><tt>((h emacspeak-m-player-browse-history) (l emacspeak-m-player-locate-media) (y emacspeak-google-yt-feed))</tt></code>
 </p>
 </dd></dl>
 
