--- a/manual/emacspeak_002deww.html
+++ b/manual/emacspeak_002deww.html
@@ -1435,11 +1435,13 @@ The ul is automatically spoken if there is no user activity.
 <div class="subsubsection" id="emacspeak_002deww_002dshell_002dcommand_002don_002durl_002dat_002dpoint">
 <h4 class="subsubsection">12.75.9.53 emacspeak-eww-shell-command-on-url-at-point</h4>
 <dl class="def">
-<dt id="index-emacspeak_002deww_002dshell_002dcommand_002don_002durl_002dat_002dpoint"><span class="category">Command: </span><span><strong>emacspeak-eww-shell-command-on-url-at-point</strong><a href='#index-emacspeak_002deww_002dshell_002dcommand_002don_002durl_002dat_002dpoint' class='copiable-anchor'> &para;</a></span></dt>
+<dt id="index-emacspeak_002deww_002dshell_002dcommand_002don_002durl_002dat_002dpoint"><span class="category">Command: </span><span><strong>emacspeak-eww-shell-command-on-url-at-point</strong> <em>(&amp;optional prompt)</em><a href='#index-emacspeak_002deww_002dshell_002dcommand_002don_002durl_002dat_002dpoint' class='copiable-anchor'> &para;</a></span></dt>
 <dd><span id="index-emacspeak_002deww_002dshell_002dcommand_002don_002durl_002dat_002dpoint-1"></span>
 
 <div class="format">
 <pre class="format">Run specified shell command on URL at point. 
+
+(fn &amp;optional PROMPT)
 </pre></div>
 </dd></dl>
 
