--- a/manual/emacspeak_002deww.html
+++ b/manual/emacspeak_002deww.html
@@ -749,7 +749,7 @@ are available are cued by an auditory icon on the header line.
 <span id="index-emacspeak_002deww_002dmarks_002dlist-1"></span>
 
 <div class="format">
-<pre class="format">List EWW Marks.
+<pre class="format">List EWW Marks as actionable buttons.
 </pre></div>
 </dd></dl>
 
