--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -1368,7 +1368,7 @@ This will work if the soundcard is set to 48000.
 <div class="subsubsection" id="emacspeak_002dm_002dplayer_002dyoutube_002dplayer">
 <h4 class="subsubsection">12.118.2.82 emacspeak-m-player-youtube-player</h4>
 <dl class="def">
-<dt id="index-emacspeak_002dm_002dplayer_002dyoutube_002dplayer"><span class="category">Command: </span><span><strong>emacspeak-m-player-youtube-player</strong> <em>(url &amp;optional mpv)</em><a href='#index-emacspeak_002dm_002dplayer_002dyoutube_002dplayer' class='copiable-anchor'> &para;</a></span></dt>
+<dt id="index-emacspeak_002dm_002dplayer_002dyoutube_002dplayer"><span class="category">Command: </span><span><strong>emacspeak-m-player-youtube-player</strong> <em>(url &amp;optional prefix)</em><a href='#index-emacspeak_002dm_002dplayer_002dyoutube_002dplayer' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
 <dt id='index-C_002d_002c-y'><span><kbd>C-, y</kbd><a href='#index-C_002d_002c-y' class='copiable-anchor'> &para;</a></span></dt>
 <dt id='index-C_002dx-_0040-a-y'><span><kbd>C-x @ a y</kbd><a href='#index-C_002dx-_0040-a-y' class='copiable-anchor'> &para;</a></span></dt>
@@ -1377,11 +1377,10 @@ This will work if the soundcard is set to 48000.
 <span id="index-emacspeak_002dm_002dplayer_002dyoutube_002dplayer-1"></span>
 
 <div class="format">
-<pre class="format">Use youtube-dl and mplayer to stream  audio from Youtube.
- Optional interactive prefix arg uses mpv instead &mdash; that works with
-manifest xml files.
+<pre class="format">Use youtube-dl  to stream  using mpv.
+ Optional interactive prefix arg uses mplayer  instead. 
 
-(fn URL &amp;optional MPV)
+(fn URL &amp;optional PREFIX)
 </pre></div>
 </dd></dl>
 
