--- a/manual/emacspeak_002dmpv.html
+++ b/manual/emacspeak_002dmpv.html
@@ -52,7 +52,8 @@ Next: <a href="emacspeak_002dmspools.html" accesskey="n" rel="next">emacspeak-ms
 <span id="emacspeak_002dmpv-1"></span><h3 class="section">12.128 emacspeak-mpv</h3>
 
 <p>MPV ==   Media Player
-Speech-enable package mpv from melpa
+Enables seamless playback of Youtube content among others.
+Binds mpv commands on C-e C-; as the  prefix key.
 </p>
 </div>
 
