--- a/manual/emacspeak_002dmpv.html
+++ b/manual/emacspeak_002dmpv.html
@@ -54,6 +54,8 @@ Next: <a href="emacspeak_002dmspools.html" accesskey="n" rel="next">emacspeak-ms
 <p>MPV ==   Media Player
 Enables seamless playback of Youtube content among others.
 Binds mpv commands on C-e C-; as the  prefix key.
+This leverages Emacs&rsquo; repeat-mode functionality, so successive mpv
+commands require only one initial ress of C-e C-;.
 </p>
 </div>
 
