--- a/manual/emacspeak_002dmpv.html
+++ b/manual/emacspeak_002dmpv.html
@@ -57,6 +57,33 @@ Binds mpv commands on C-e C-; as the  prefix key.
 This leverages Emacs&rsquo; repeat-mode functionality, so successive mpv
 commands require only one initial ress of C-e C-;.
 </p>
+<ul class="section-toc">
+<li><a href="#Emacspeak_002dMpv-Commands" accesskey="1">Emacspeak-Mpv Commands</a></li>
+</ul>
+<div class="subsection" id="Emacspeak_002dMpv-Commands">
+<h4 class="subsection">12.128.1 Emacspeak-Mpv Commands</h4>
+
+<ul class="section-toc">
+<li><a href="#emacspeak_002dmpv_002dposition" accesskey="1">emacspeak-mpv-position</a></li>
+</ul>
+<div class="subsubsection" id="emacspeak_002dmpv_002dposition">
+<h4 class="subsubsection">12.128.1.1 emacspeak-mpv-position</h4>
+<dl class="def">
+<dt id="index-emacspeak_002dmpv_002dposition"><span class="category">Command: </span><span><strong>emacspeak-mpv-position</strong><a href='#index-emacspeak_002dmpv_002dposition' class='copiable-anchor'> &para;</a></span></dt>
+<dd><dl compact="compact">
+<dt id='index-C_002de-C_002d_003b-_002e'><span><kbd>C-e C-; .</kbd><a href='#index-C_002de-C_002d_003b-_002e' class='copiable-anchor'> &para;</a></span></dt>
+<dt id='index-_003cfn_003e-C_002d_003b-_002e'><span><kbd>&lt;fn&gt; C-; .</kbd><a href='#index-_003cfn_003e-C_002d_003b-_002e' class='copiable-anchor'> &para;</a></span></dt>
+</dl>
+
+<span id="index-emacspeak_002dmpv_002dposition-1"></span>
+
+<div class="format">
+<pre class="format">Show position and duration.
+</pre></div>
+</dd></dl>
+
+</div>
+</div>
 </div>
 
 
