--- a/manual/index.html
+++ b/manual/index.html
@@ -46,7 +46,7 @@ ul.no-bullet {list-style: none}
 
 
 <p>This manual documents <strong>Emacspeak, The Complete Audio Desktop</strong>
-and  was last updated on July 24, 2022.
+and  was last updated on July 26, 2022.
 </p>
 
 <div class="top" id="Top">
@@ -1241,7 +1241,13 @@ Next: <a href="Copyright.html" accesskey="n" rel="next">Copyright</a> &nbsp; [<a
         <li><a id="toc-emacspeak_002dmines_002dspeak_002duncovered_002dcount" href="emacspeak_002dmines.html#emacspeak_002dmines_002dspeak_002duncovered_002dcount">12.127.1.9 emacspeak-mines-speak-uncovered-count</a></li>
       </ul></li>
     </ul></li>
-    <li><a id="toc-emacspeak_002dmpv-1" href="emacspeak_002dmpv.html">12.128 emacspeak-mpv</a></li>
+    <li><a id="toc-emacspeak_002dmpv-1" href="emacspeak_002dmpv.html">12.128 emacspeak-mpv</a>
+    <ul class="no-bullet">
+      <li><a id="toc-Emacspeak_002dMpv-Commands" href="emacspeak_002dmpv.html#Emacspeak_002dMpv-Commands">12.128.1 Emacspeak-Mpv Commands</a>
+      <ul class="no-bullet">
+        <li><a id="toc-emacspeak_002dmpv_002dposition" href="emacspeak_002dmpv.html#emacspeak_002dmpv_002dposition">12.128.1.1 emacspeak-mpv-position</a></li>
+      </ul></li>
+    </ul></li>
     <li><a id="toc-emacspeak_002dmspools-1" href="emacspeak_002dmspools.html">12.129 emacspeak-mspools</a></li>
     <li><a id="toc-emacspeak_002dmuggles-1" href="emacspeak_002dmuggles.html">12.130 emacspeak-muggles</a>
     <ul class="no-bullet">
