--- a/manual/Emacspeak-Keybindings-On-emacspeak_002dkeymap.html
+++ b/manual/Emacspeak-Keybindings-On-emacspeak_002dkeymap.html
@@ -183,6 +183,10 @@ Next: <a href="Emacspeak-Keybindings-On-emacspeak_002ddtk_002dsubmap.html" acces
 <dd><p>end-of-line
 </p>
 </dd>
+<dt><span><kbd>C-f</kbd></span></dt>
+<dd><p>emacspeak-find-dired
+</p>
+</dd>
 <dt><span><kbd>C-j</kbd></span></dt>
 <dd><p>emacspeak-hide-speak-block-sans-prefix
 </p>
