--- a/manual/emacspeak_002ddired.html
+++ b/manual/emacspeak_002ddired.html
@@ -82,6 +82,7 @@ Voicification is used to indicate directories, marked files etc.
 <li><a href="#emacspeak_002ddired_002dspeak_002dfile_002dsize">emacspeak-dired-speak-file-size</a></li>
 <li><a href="#emacspeak_002ddired_002dspeak_002dheader_002dline">emacspeak-dired-speak-header-line</a></li>
 <li><a href="#emacspeak_002ddired_002dspeak_002dsymlink_002dtarget">emacspeak-dired-speak-symlink-target</a></li>
+<li><a href="#emacspeak_002dfind_002ddired">emacspeak-find-dired</a></li>
 <li><a href="#emacspeak_002dlocate_002dplay_002dresults_002das_002dplaylist">emacspeak-locate-play-results-as-playlist</a></li>
 </ul>
 <div class="subsubsection" id="emacspeak_002ddired_002dcsv_002dopen">
@@ -328,8 +329,25 @@ On a directory line, run du -s on the directory to speak its size.
 </dd></dl>
 
 </div>
+<div class="subsubsection" id="emacspeak_002dfind_002ddired">
+<h4 class="subsubsection">12.48.1.20 emacspeak-find-dired</h4>
+<dl class="def">
+<dt id="index-emacspeak_002dfind_002ddired"><span class="category">Command: </span><span><strong>emacspeak-find-dired</strong><a href='#index-emacspeak_002dfind_002ddired' class='copiable-anchor'> &para;</a></span></dt>
+<dd><dl compact="compact">
+<dt id='index-C_002de-C_002df'><span><kbd>C-e C-f</kbd><a href='#index-C_002de-C_002df' class='copiable-anchor'> &para;</a></span></dt>
+<dt id='index-_003cfn_003e-C_002df'><span><kbd>&lt;fn&gt; C-f</kbd><a href='#index-_003cfn_003e-C_002df' class='copiable-anchor'> &para;</a></span></dt>
+</dl>
+
+<span id="index-emacspeak_002dfind_002ddired-1"></span>
+
+<div class="format">
+<pre class="format">Prompt for find-dired arguments using context and completion.
+</pre></div>
+</dd></dl>
+
+</div>
 <div class="subsubsection" id="emacspeak_002dlocate_002dplay_002dresults_002das_002dplaylist">
-<h4 class="subsubsection">12.48.1.20 emacspeak-locate-play-results-as-playlist</h4>
+<h4 class="subsubsection">12.48.1.21 emacspeak-locate-play-results-as-playlist</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dlocate_002dplay_002dresults_002das_002dplaylist"><span class="category">Command: </span><span><strong>emacspeak-locate-play-results-as-playlist</strong> <em>(&amp;optional shuffle)</em><a href='#index-emacspeak_002dlocate_002dplay_002dresults_002das_002dplaylist' class='copiable-anchor'> &para;</a></span></dt>
 <dd><span id="index-emacspeak_002dlocate_002dplay_002dresults_002das_002dplaylist-1"></span>
