--- a/manual/Emacspeak-Keybindings-On-emacspeak_002dkeymap.html
+++ b/manual/Emacspeak-Keybindings-On-emacspeak_002dkeymap.html
@@ -60,7 +60,7 @@ Next: <a href="Emacspeak-Keybindings-On-emacspeak_002ddtk_002dsubmap.html" acces
 </p>
 </dd>
 <dt><span><kbd>$</kbd></span></dt>
-<dd><p>emacspeak-shell-command
+<dd><p>flyspell-mode
 </p>
 </dd>
 <dt><span><kbd>%</kbd></span></dt>
