--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -493,12 +493,7 @@ but quickly switch to a window by name.
 <h4 class="subsubsection">12.179.1.21 emacspeak-shell-command</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dshell_002dcommand"><span class="category">Command: </span><span><strong>emacspeak-shell-command</strong> <em>(command)</em><a href='#index-emacspeak_002dshell_002dcommand' class='copiable-anchor'> &para;</a></span></dt>
-<dd><dl compact="compact">
-<dt id='index-C_002de-_0024'><span><kbd>C-e $</kbd><a href='#index-C_002de-_0024' class='copiable-anchor'> &para;</a></span></dt>
-<dt id='index-_003cfn_003e-_0024'><span><kbd>&lt;fn&gt; $</kbd><a href='#index-_003cfn_003e-_0024' class='copiable-anchor'> &para;</a></span></dt>
-</dl>
-
-<span id="index-emacspeak_002dshell_002dcommand-1"></span>
+<dd><span id="index-emacspeak_002dshell_002dcommand-1"></span>
 
 <div class="format">
 <pre class="format">Run shell command COMMANDAND speak its output.
