--- a/manual/Emacspeak-Keybindings-On-emacspeak_002dhyper_002dkeymap.html
+++ b/manual/Emacspeak-Keybindings-On-emacspeak_002dhyper_002dkeymap.html
@@ -116,6 +116,10 @@ Next: <a href="Emacspeak-Keybindings-On-emacspeak_002dsuper_002dkeymap.html" acc
 <dd><p>hippie-expand
 </p>
 </dd>
+<dt><span><kbd>a</kbd></span></dt>
+<dd><p>emacspeak-amark-browse
+</p>
+</dd>
 <dt><span><kbd>b</kbd></span></dt>
 <dd><p>eww-list-buffers
 </p>
