--- a/manual/emacspeak_002damark.html
+++ b/manual/emacspeak_002damark.html
@@ -67,8 +67,9 @@ emacspeak-mplayer and friends to set and jump to bookmarks.
 
 <ul class="section-toc">
 <li><a href="#emacspeak_002damark_002dadd" accesskey="1">emacspeak-amark-add</a></li>
-<li><a href="#emacspeak_002damark_002dfind" accesskey="2">emacspeak-amark-find</a></li>
-<li><a href="#emacspeak_002damark_002dsave" accesskey="3">emacspeak-amark-save</a></li>
+<li><a href="#emacspeak_002damark_002dbrowse" accesskey="2">emacspeak-amark-browse</a></li>
+<li><a href="#emacspeak_002damark_002dfind" accesskey="3">emacspeak-amark-find</a></li>
+<li><a href="#emacspeak_002damark_002dsave" accesskey="4">emacspeak-amark-save</a></li>
 </ul>
 <div class="subsubsection" id="emacspeak_002damark_002dadd">
 <h4 class="subsubsection">12.12.1.1 emacspeak-amark-add</h4>
@@ -86,8 +87,25 @@ given name, it is updated with path and position.
 </dd></dl>
 
 </div>
+<div class="subsubsection" id="emacspeak_002damark_002dbrowse">
+<h4 class="subsubsection">12.12.1.2 emacspeak-amark-browse</h4>
+<dl class="def">
+<dt id="index-emacspeak_002damark_002dbrowse"><span class="category">Command: </span><span><strong>emacspeak-amark-browse</strong><a href='#index-emacspeak_002damark_002dbrowse' class='copiable-anchor'> &para;</a></span></dt>
+<dd><dl compact="compact">
+<dt id='index-C_002d_003b-a'><span><kbd>C-; a</kbd><a href='#index-C_002d_003b-a' class='copiable-anchor'> &para;</a></span></dt>
+<dt id='index-C_002dx-_0040-h-a'><span><kbd>C-x @ h a</kbd><a href='#index-C_002dx-_0040-h-a' class='copiable-anchor'> &para;</a></span></dt>
+</dl>
+
+<span id="index-emacspeak_002damark_002dbrowse-1"></span>
+
+<div class="format">
+<pre class="format">Browse  nearest amarks file.
+</pre></div>
+</dd></dl>
+
+</div>
 <div class="subsubsection" id="emacspeak_002damark_002dfind">
-<h4 class="subsubsection">12.12.1.2 emacspeak-amark-find</h4>
+<h4 class="subsubsection">12.12.1.3 emacspeak-amark-find</h4>
 <dl class="def">
 <dt id="index-emacspeak_002damark_002dfind"><span class="category">Command: </span><span><strong>emacspeak-amark-find</strong> <em>(name)</em><a href='#index-emacspeak_002damark_002dfind' class='copiable-anchor'> &para;</a></span></dt>
 <dd><span id="index-emacspeak_002damark_002dfind-1"></span>
@@ -101,7 +119,7 @@ given name, it is updated with path and position.
 
 </div>
 <div class="subsubsection" id="emacspeak_002damark_002dsave">
-<h4 class="subsubsection">12.12.1.3 emacspeak-amark-save</h4>
+<h4 class="subsubsection">12.12.1.4 emacspeak-amark-save</h4>
 <dl class="def">
 <dt id="index-emacspeak_002damark_002dsave"><span class="category">Command: </span><span><strong>emacspeak-amark-save</strong><a href='#index-emacspeak_002damark_002dsave' class='copiable-anchor'> &para;</a></span></dt>
 <dd><span id="index-emacspeak_002damark_002dsave-1"></span>
