--- a/manual/index.html
+++ b/manual/index.html
@@ -46,7 +46,7 @@ ul.no-bullet {list-style: none}
 
 
 <p>This manual documents <strong>Emacspeak, The Complete Audio Desktop</strong>
-and  was last updated on July 30, 2022.
+and  was last updated on August 3, 2022.
 </p>
 
 <div class="top" id="Top">
@@ -275,8 +275,9 @@ Next: <a href="Copyright.html" accesskey="n" rel="next">Copyright</a> &nbsp; [<a
       <li><a id="toc-Emacspeak_002dAmark-Commands" href="emacspeak_002damark.html#Emacspeak_002dAmark-Commands">12.12.1 Emacspeak-Amark Commands</a>
       <ul class="no-bullet">
         <li><a id="toc-emacspeak_002damark_002dadd" href="emacspeak_002damark.html#emacspeak_002damark_002dadd">12.12.1.1 emacspeak-amark-add</a></li>
-        <li><a id="toc-emacspeak_002damark_002dfind" href="emacspeak_002damark.html#emacspeak_002damark_002dfind">12.12.1.2 emacspeak-amark-find</a></li>
-        <li><a id="toc-emacspeak_002damark_002dsave" href="emacspeak_002damark.html#emacspeak_002damark_002dsave">12.12.1.3 emacspeak-amark-save</a></li>
+        <li><a id="toc-emacspeak_002damark_002dbrowse" href="emacspeak_002damark.html#emacspeak_002damark_002dbrowse">12.12.1.2 emacspeak-amark-browse</a></li>
+        <li><a id="toc-emacspeak_002damark_002dfind" href="emacspeak_002damark.html#emacspeak_002damark_002dfind">12.12.1.3 emacspeak-amark-find</a></li>
+        <li><a id="toc-emacspeak_002damark_002dsave" href="emacspeak_002damark.html#emacspeak_002damark_002dsave">12.12.1.4 emacspeak-amark-save</a></li>
       </ul></li>
     </ul></li>
     <li><a id="toc-emacspeak_002danalog-1" href="emacspeak_002danalog.html">12.13 emacspeak-analog</a>
