--- a/manual/emacspeak_002damark.html
+++ b/manual/emacspeak_002damark.html
@@ -52,12 +52,12 @@ Next: <a href="emacspeak_002danalog.html" accesskey="n" rel="next">emacspeak-ana
 <span id="emacspeak_002damark-1"></span><h3 class="section">12.12 emacspeak-amark</h3>
 
 <p>Structure emacspeak-amark holds a bookmark into an mp3 file
-path: fully qualified pathname  to file being marked
+path:  filename containing  marked
 name: Bookmark tag
 Position: time offset from start
 </p>
 <p>This library will be used from emacspeak-m-player,
-emacspeak-mplayer and friends to set and jump to bookmarks.
+to set and jump to bookmarks.
 </p>
 <ul class="section-toc">
 <li><a href="#Emacspeak_002dAmark-Commands" accesskey="1">Emacspeak-Amark Commands</a></li>
