--- a/manual/emacspeak_002dmpv.html
+++ b/manual/emacspeak_002dmpv.html
@@ -64,10 +64,30 @@ commands require only one initial ress of C-e C-;.
 <h4 class="subsection">12.128.1 Emacspeak-Mpv Commands</h4>
 
 <ul class="section-toc">
-<li><a href="#emacspeak_002dmpv_002dposition" accesskey="1">emacspeak-mpv-position</a></li>
+<li><a href="#emacspeak_002dmpv_002dplay_002durl" accesskey="1">emacspeak-mpv-play-url</a></li>
+<li><a href="#emacspeak_002dmpv_002dposition" accesskey="2">emacspeak-mpv-position</a></li>
 </ul>
+<div class="subsubsection" id="emacspeak_002dmpv_002dplay_002durl">
+<h4 class="subsubsection">12.128.1.1 emacspeak-mpv-play-url</h4>
+<dl class="def">
+<dt id="index-emacspeak_002dmpv_002dplay_002durl"><span class="category">Command: </span><span><strong>emacspeak-mpv-play-url</strong> <em>(url &amp;optional left-channel)</em><a href='#index-emacspeak_002dmpv_002dplay_002durl' class='copiable-anchor'> &para;</a></span></dt>
+<dd><dl compact="compact">
+<dt id='index-C_002de-C_002d_003b-_003b'><span><kbd>C-e C-; ;</kbd><a href='#index-C_002de-C_002d_003b-_003b' class='copiable-anchor'> &para;</a></span></dt>
+<dt id='index-_003cfn_003e-C_002d_003b-_003b'><span><kbd>&lt;fn&gt; C-; ;</kbd><a href='#index-_003cfn_003e-C_002d_003b-_003b' class='copiable-anchor'> &para;</a></span></dt>
+</dl>
+
+<span id="index-emacspeak_002dmpv_002dplay_002durl-1"></span>
+
+<div class="format">
+<pre class="format">Play URL using mpv. Prefix arg plays on left channel..
+
+(fn URL &amp;optional LEFT-CHANNEL)
+</pre></div>
+</dd></dl>
+
+</div>
 <div class="subsubsection" id="emacspeak_002dmpv_002dposition">
-<h4 class="subsubsection">12.128.1.1 emacspeak-mpv-position</h4>
+<h4 class="subsubsection">12.128.1.2 emacspeak-mpv-position</h4>
 <dl class="def">
 <dt id="index-emacspeak_002dmpv_002dposition"><span class="category">Command: </span><span><strong>emacspeak-mpv-position</strong><a href='#index-emacspeak_002dmpv_002dposition' class='copiable-anchor'> &para;</a></span></dt>
 <dd><dl compact="compact">
