--- a/manual/index.html
+++ b/manual/index.html
@@ -46,7 +46,7 @@ ul.no-bullet {list-style: none}
 
 
 <p>This manual documents <strong>Emacspeak, The Complete Audio Desktop</strong>
-and  was last updated on August 21, 2022.
+and  was last updated on August 26, 2022.
 </p>
 
 <div class="top" id="Top">
@@ -1247,7 +1247,8 @@ Next: <a href="Copyright.html" accesskey="n" rel="next">Copyright</a> &nbsp; [<a
     <ul class="no-bullet">
       <li><a id="toc-Emacspeak_002dMpv-Commands" href="emacspeak_002dmpv.html#Emacspeak_002dMpv-Commands">12.128.1 Emacspeak-Mpv Commands</a>
       <ul class="no-bullet">
-        <li><a id="toc-emacspeak_002dmpv_002dposition" href="emacspeak_002dmpv.html#emacspeak_002dmpv_002dposition">12.128.1.1 emacspeak-mpv-position</a></li>
+        <li><a id="toc-emacspeak_002dmpv_002dplay_002durl" href="emacspeak_002dmpv.html#emacspeak_002dmpv_002dplay_002durl">12.128.1.1 emacspeak-mpv-play-url</a></li>
+        <li><a id="toc-emacspeak_002dmpv_002dposition" href="emacspeak_002dmpv.html#emacspeak_002dmpv_002dposition">12.128.1.2 emacspeak-mpv-position</a></li>
       </ul></li>
     </ul></li>
     <li><a id="toc-emacspeak_002dmspools-1" href="emacspeak_002dmspools.html">12.129 emacspeak-mspools</a></li>
