--- a/manual/URL-Templates.html
+++ b/manual/URL-Templates.html
@@ -50,7 +50,7 @@ Previous: <a href="xbacklight.html" accesskey="p" rel="prev">xbacklight</a>, Up:
 <hr>
 <span id="URL-Templates-1"></span><h3 class="section">12.239 URL Templates</h3>
 
-<p>This section documents a total of 75 URL Templates.
+<p>This section documents a total of 74 URL Templates.
 </p>
 <p>All of these URL templates can be invoked via command
  <kbd>M-x emacspeak-url-template-fetch</kbd> normally bound to
@@ -79,9 +79,7 @@ Each URL template carries out the following steps:
 
 <p>Search Linux ArchWiki</p></li><li> <b>BBC Podcast Directory</b>
 
-<p>BBC PodCast Directory</p></li><li> <b>BBC World News Summary</b>
-
-<p>BBC World News Summary</p></li><li> <b>Baseball Box Scores</b>
+<p>BBC PodCast Directory</p></li><li> <b>Baseball Box Scores</b>
 
 <p>Display baseball Play By Play.</p></li><li> <b>Baseball Game Details</b>
 
